--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
       "matches": [
       "<all_urls>"
       ],
-      "js": ["jquery-3.1.1.min.js", "content.js"]
+      "js": ["jquery-3.1.1.min.js", "content.js"],
+      "run_at": "document_end"
     }
   ],
   "browser_action": {
@@ -15,7 +16,10 @@
   },
   "background": {
     "scripts": ["background.js"]
-  }
+  },
+  "permissions": [
+    "activeTab"
+  ]
 }
 
 
